<?xml version="1.0"?>
<package>
  <name>mdp_plan_exec</name>
  <version>1.0.9</version>
  <description>The mdp_plan_exec package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="b.lacerda@cs.bham.ac.uk">Bruno Lacerda</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <author email="b.lacerda@cs.bham.ac.uk">Bruno Lacerda</author>

  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>topological_navigation</build_depend>
  <build_depend>strands_navigation_msgs</build_depend>
  <build_depend>strands_executive_msgs</build_depend>  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>  
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>topological_navigation</run_depend>
  <run_depend>strands_navigation_msgs</run_depend>
  <run_depend>strands_executive_msgs</run_depend>
  <run_depend>door_pass</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>