<?xml version="1.0"?>
<package>
  <name>prism_strands</name>
  <version>1.2.1</version>
  <description>The PRISM model checker adapted for use in the STRANDS system. Note you require Java 8 to be set as your default runtime to use this pacakge.</description>

  <maintainer email="b.lacerda@cs.bham.ac.uk">Bruno Lacerda</maintainer>
  <maintainer email="nick.hawes@gmail.com">Nick Hawes</maintainer>

  <license>GPL</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>java</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rsync</build_depend>
  <run_depend>java</run_depend>
  <run_depend>roscpp</run_depend>

</package>
