<?xml version="1.0"?>
<package>
  <name>scheduler</name>
  <version>1.2.0</version>
  <description>A task scheduler implemented using mixed integer programming.</description>

  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>
  <maintainer email="lxm210@cs.bham.ac.uk">Lenka Mudrova</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/scheduler</url>

  <author>Lenka Mudrova</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>scipoptsuite</build_depend>
  <run_depend>scipoptsuite</run_depend>

  <build_depend>strands_executive_msgs</build_depend>
  <run_depend>strands_executive_msgs</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>mongodb_store</build_depend>
  <run_depend>mongodb_store</run_depend>

</package>
