<?xml version="1.0"?>
<package>
  <name>scipoptsuite</name>
  <version>1.0.4</version>
  <description>This installs version 3.0.2 of SCIP optimisation suite.</description>


  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>


  <license>ZIB Academic License</license>


  <!-- <url type="website">http://wiki.ros.org/scipoptsuite</url> -->
  <url type="website">http://scip.zib.de</url> 


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>zlib</build_depend>
  <build_depend>libgmp</build_depend>
  <build_depend>libncurses-dev</build_depend>
  <run_depend>libgmp</run_depend>
  <run_depend>zlib</run_depend>
  <run_depend>libncurses-dev</run_depend>


  <export>

  </export>
</package>
