<?xml version="1.0"?>
<package>
  <name>strands_executive_msgs</name>
  <version>1.0.9</version>
  <description>Messages used to interact with the STRANDS executive framework.</description>

  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>

  <license>MIT</license>

  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>mongodb_store_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>mongodb_store_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>

</package>