<?xml version="1.0"?>
<package>
  <name>strands_executive_tutorial</name>
  <version>1.0.1</version>
  <description>Tutorial files for the STRANDS Executive packages.</description>

   <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>

  <license>MIT</license>

  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>strands_executive_msgs</build_depend>
  <build_depend>mongodb_store_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>topological_navigation</build_depend>
  <build_depend>topological_utils</build_depend>
  <build_depend>mdp_plan_exec</build_depend>
  <build_depend>routine_behaviours</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>strands_executive_msgs</run_depend>
  <run_depend>mongodb_store_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>topological_navigation</run_depend>
  <run_depend>topological_utils</run_depend>
  <run_depend>python-dateutil</run_depend>
  <run_depend>scheduler</run_depend>
  <run_depend>wait_action</run_depend>
  <run_depend>mdp_plan_exec</run_depend>
  <run_depend>routine_behaviours</run_depend>
  
</package>