<?xml version="1.0"?>
<package>
  <name>task_executor</name>
  <version>1.2.1</version>
  <description>A package for triggering and monitoring the execution of actionlib-based tasks.</description>
 
  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>

  <license>MIT</license>

  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>strands_executive_msgs</build_depend>
  <build_depend>mongodb_store_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>topological_navigation</build_depend>
  <build_depend>mdp_plan_exec</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>strands_executive_msgs</run_depend>
  <run_depend>mongodb_store_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>topological_navigation</run_depend>

  <run_depend>python-dateutil</run_depend>
  <run_depend>scheduler</run_depend>
  <run_depend>wait_action</run_depend>
  <run_depend>mdp_plan_exec</run_depend>
  <test_depend>rostest</test_depend>
  <test_depend>topological_utils</test_depend>

</package>
  
